Updated Text and added icon and document name

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>LupinBupin</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="images/icon.png">
 </head>
 <body>
     <div class="container">
@@ -15,9 +16,10 @@
             </div>
         </details>
         <div class="introduction">
-            <h1>lupinbupinlupin</h1>
-            <h2>I have not committed various warcrimes</h2>
+            <h1>Ryan Smith</h1>
+            <h2>Software Engineering Student</h2>
         </div>  
+        <div></div>
     </div>
 </body>
 </html>
