Added Music! Music.html and css updated

--- a/index.html
+++ b/index.html
@@ -12,13 +12,15 @@
         <details class="menu">
             <summary><img src="images/burger-menu.svg" alt=""></summary>
             <div class="menu-content">
+                <a href="music.html">Music</a>
                 <a href="https://5e.lupinbup.in">5eTools</a>
             </div>
         </details>
+        
         <div class="introduction">
             <h1>Ryan Smith</h1>
             <h2>Software Engineering Student</h2>
-        </div>  
+        </div>
         <div></div>
     </div>
 </body>
