--- a/music.html
+++ b/music.html
@@ -13,10 +13,18 @@
         <details class="menu">
             <summary><img src="images/burger-menu.svg" alt=""></summary>
             <div class="menu-content">
+                <a href="index.html">Home</a>
                 <a href="music.html">Music</a>
                 <a href="https://5e.lupinbup.in">5eTools</a>
             </div>
         </details>
+
+        <div class="introduction">
+            <h1>Music</h1>
+            <h2>Hello! Please enjoy my terrible taste in music accross my various playlists! (sorry about the low rez album art)</h2>
+        </div>
+
+        <!--Spotify Embeds-->
         <div class="music">
             <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/72NaLUK0ZCol29pnmbod6r?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
             <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/3Q0KtNbHEkGjxhdCaBOWzQ?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
@@ -26,6 +34,6 @@
             <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/65Tr1Pa45XcURCFd52DevT?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
             <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/5BvaYNlTjBOWE8FaMF0YsV?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         </div>
-    
+
 </body>
 </html>
