Album art is no longer low resolution

--- a/music.html
+++ b/music.html
@@ -21,7 +21,7 @@
 
         <div class="introduction">
             <h1>Music</h1>
-            <h2>Hello! Please enjoy my terrible taste in music accross my various playlists! (sorry about the low rez album art)</h2>
+            <h2>Hello! Please enjoy my terrible taste in music accross my various playlists!</h2>
         </div>
 
         <!--Spotify Embeds-->
